[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "pytest-recording"
version = "0.13.4+lineaje.1"
description = "A pytest plugin powered by VCR.py to record and replay HTTP traffic"
keywords = [
    "pytest",
    "vcr",
    "network",
    "mock",
]
authors = [
    { name = "Dmitry Dygalo", email = "dmitry@dygalo.dev" },
]
maintainers = [
    { name = "Lineaje DepFixer", email = "221268890+Lineaje-DepFixer@users.noreply.github.com" },
]
requires-python = ">=3.9"
license = "MIT"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
dependencies = [
    "vcrpy>=2.0.1",
    "pytest>=3.5.0",
]

[project.optional-dependencies]
tests = [
    "pytest-httpbin",
    "pytest-mock",
    "requests",
    "Werkzeug==3.1.3",
]
dev = [
    "pytest_recording[tests]",
]

[project.urls]
Documentation = "https://github.com/kiwicom/pytest-recording"
Changelog = "https://github.com/kiwicom/pytest-recording/blob/master/docs/changelog.rst"
"Bug Tracker" = "https://github.com/kiwicom/pytest-recording/issues"
"Source Code" = "https://github.com/kiwicom/pytest-recording"
Homepage = "https://github.com/lineaje-labs-gos/kiwicom-pytest-recording"
Repository = "https://github.com/lineaje-labs-gos/kiwicom-pytest-recording"
Tracker = "https://github.com/lineaje-labs-gos/kiwicom-pytest-recording/issues"

[project.entry-points.pytest11]
recording = "pytest_recording.plugin"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "C",
    "B",
    "D",
    "I",
    "T",
    "FIX",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D401",
]

[tool.ruff.lint.isort]
known-first-party = [
    "pytest_recording",
]
known-third-party = [
    "_pytest",
    "packaging",
    "pytest",
    "vcr",
    "yaml",
]

[tool.ruff.format]
skip-magic-trailing-comma = false
